--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -227,7 +227,7 @@
           <h2 class="text-2xl font-semibold">Kemeja Pria</h2>
           <div class="divider"></div>
           <p class="text-lg">Rp. 200.000</p>
-          <a href="/detail-item" class="mt-4 button-custom">Lihat Produk</a>
+          <a href="/katalog" class="mt-4 button-custom">Lihat Produk</a>
         </div>
       </div>
       <div id="banner1" class="banner mb-4">
@@ -241,7 +241,7 @@
           <h2 class="text-2xl font-semibold">Tas Wanita</h2>
           <div class="divider"></div>
           <p class="text-lg">Rp. 200.000</p>
-          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+          <a href="/katalog" class="mt-4 button-custom">Lihat Produk</a>
         </div>
       </div>
       <div id="banner2" class="banner mb-4">
@@ -255,7 +255,7 @@
           <h2 class="text-2xl font-semibold">Sepatu Lari</h2>
           <div class="divider"></div>
           <p class="text-lg">Rp. 200.000</p>
-          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+          <a href="/katalog" class="mt-4 button-custom">Lihat Produk</a>
         </div>
       </div>
       <div id="banner3" class="banner mb-4">
@@ -269,7 +269,7 @@
           <h2 class="text-2xl font-semibold">Kendaraan</h2>
           <div class="divider"></div>
           <p class="text-lg">Rp. 200.000</p>
-          <a href="#" class="mt-4 button-custom">Lihat Produk</a>
+          <a href="/katalog" class="mt-4 button-custom">Lihat Produk</a>
         </div>
       </div>
     </div>
